WX-1409 Upgrade Cromwell to Java 17 (#7470)